--- a/style.css
+++ b/style.css
@@ -1,14 +1,12 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-
 #map {
-    width: auto;
-    height: 90vh;
-
+  width: auto;
+  height: 90vh;
 }
 
 /* styles.css */
@@ -17,19 +15,19 @@
    
 } */
 table {
-    border-collapse: collapse;
-    width: 100%;
+  border-collapse: collapse;
+  width: 100%;
 }
 
 td {
-    border: 2px solid black;
-    padding: 8px;
-    text-align: left;
+  border: 2px solid black;
+  padding: 8px;
+  text-align: left;
 }
 
 #popup-table td {
-    padding: 15px;
-    border: 2px solid black;
+  padding: 15px;
+  border: 2px solid black;
 }
 
 /* 
@@ -44,74 +42,115 @@ td {
 
 } */
 .leaflet-popup-content-wrapper {
-    max-height: 300px;
-    /* Set the maximum height for the table */
-    overflow-y: auto;
-    /* Add a vertical scrollbar when the content overflows */
-    width: 100%;
+  max-height: 300px;
+  /* Set the maximum height for the table */
+  overflow-y: auto;
+  /* Add a vertical scrollbar when the content overflows */
+  width: 100%;
 }
 
 #popup-table {
-    max-width: 200px;
-    max-height: 300px;
-    /* Set the maximum height for the table */
-    overflow: auto;
-    /* Add a vertical scrollbar when the content overflows */
-    width: auto;
-    border-collapse: collapse;
-    margin-top: 10px;
+  max-width: 200px;
+  max-height: 300px;
+  /* Set the maximum height for the table */
+  overflow: auto;
+  /* Add a vertical scrollbar when the content overflows */
+  width: auto;
+  border-collapse: collapse;
+  margin-top: 10px;
 }
 
 #popup-table tr {
-    border-bottom: 2px solid black;
-    /* Add a border between rows for better visibility */
+  border-bottom: 2px solid black;
+  /* Add a border between rows for better visibility */
 }
 
 .popup-button {
-    margin-top: 10px;
-    /* Add some space between the buttons and the table */
-    padding: 5px 10px;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+  margin-top: 10px;
+  /* Add some space between the buttons and the table */
+  padding: 5px 10px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 .popup-button:hover {
-    background-color: #45a049;
+  background-color: #45a049;
 }
 
 .leaflet-container a.leaflet-popup-close-button {
-    position: absolute;
-    top: 0;
-    right: 0px;
-    border: none;
-    text-align: center;
-    font-weight: bold;
-    width: 24px;
-    height: 24px;
-    font: 16px/24px Tahoma, Verdana, sans-serif;
-    color: red;
-    text-decoration: none;
-    background: transparent;
+  position: absolute;
+  top: 0;
+  right: 0px;
+  border: none;
+  text-align: center;
+  font-weight: bold;
+  width: 24px;
+  height: 24px;
+  font: 16px/24px Tahoma, Verdana, sans-serif;
+  color: red;
+  text-decoration: none;
+  background: transparent;
 }
 
 .leaflet-div-icon {
-    margin-left: -10px;
-    margin-top: -10px;
-    width: 5px;
-    height: 5px;
-    transform: translate3d(573px, 79px, 0px);
-    z-index: 4079;
-    background-color: red;
+  margin-left: -10px;
+  margin-top: -10px;
+  width: 5px;
+  height: 5px;
+  transform: translate3d(573px, 79px, 0px);
+  z-index: 4079;
+  background-color: red;
 }
 
-
 .leaflet-draw-edit-marker .leaflet-marker-icon {
-    width: 2px; /* Adjust the width as needed */
-    height: 2px; /* Adjust the height as needed */
-    background-color: red;
+  width: 2px; /* Adjust the width as needed */
+  height: 2px; /* Adjust the height as needed */
+  background-color: red;
 }
 
 /* <div class="leaflet-marker-icon leaflet-div-icon leaflet-editing-icon leaflet-touch-icon leaflet-zoom-animated leaflet-interactive" tabindex="0" role="button" style="margin-left: -10px; margin-top: -10px; width: 20px; height: 20px; transform: translate3d(420px, 225px, 0px); z-index: 4225;"></div> */
+/* Custom CSS for DataTable header */
+#workTable thead th {
+  background-color: black;
+  color: white;
+}
+
+/* Flexbox layout */
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  flex: 1;
+}
+#table-container {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  max-height: 580px; /* Adjust the maximum height as needed */
+  overflow-y: auto;
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 20px;
+  border-top: 1px solid #ccc;
+  z-index: 99999;
+}
+.close-button {
+  position: absolute;
+  top: 60px;
+  right: 5px;
+  padding: 5px 10px;
+  z-index: 999;
+  cursor: pointer;
+  background-color: #dc3545;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+}
