--- a/style.css
+++ b/style.css
@@ -141,6 +141,9 @@ main {
   border-top: 1px solid #ccc;
   z-index: 99999;
 }
+#table-container tbody tr {
+  cursor: pointer;
+}
 .close-button {
   position: absolute;
   top: 60px;
