--- a/style.css
+++ b/style.css
@@ -134,8 +134,8 @@ main {
   bottom: 0;
   left: 0;
   width: 100%;
-  max-height: 580px; /* Adjust the maximum height as needed */
-  overflow-y: auto;
+  max-height: 400px; /* Adjust the maximum height as needed */
+  overflow-y: scroll;
   background-color: rgba(255, 255, 255, 0.8);
   padding: 20px;
   border-top: 1px solid #ccc;
