--- a/style.css
+++ b/style.css
@@ -206,3 +206,13 @@ main {
   background-color: #888;
   border-radius: 4px;
 }
+
+
+/* side bar */
+
+.sidebar{
+  
+  Width:70px;
+Height:100vh;
+background-color: #163140;
+}
