leaflet searching completed

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
   width: auto;
   height: 90vh;
 }
-a{
+a {
   text-decoration: none;
   color: white;
 }
@@ -212,6 +212,8 @@ main {
   background-color: #888;
   border-radius: 4px;
 }
-
+.leaflet-touch .geocoder-control {
+  z-index: 9999999;
+}
 
 /* side bar */
