--- a/style.css
+++ b/style.css
@@ -5,10 +5,10 @@
 }
 /* nav */
 /*  */
-#map {
+/* #map {
   width: 100%;
   height: 90vh;
-}
+} */
 a {
   text-decoration: none;
   color: white;
@@ -242,4 +242,3 @@ main {
   z-index: 9999999;
 }
 
-/* side bar */
