--- a/style1.css
+++ b/style1.css
@@ -177,7 +177,7 @@ main {
   cursor: pointer;
 }
 .close-button {
-  position: absolute;
+  position:absolute;
   top: 15px;
   right: 5px;
   padding: 5px 10px;
@@ -241,5 +241,65 @@ main {
 .leaflet-touch .geocoder-control {
   z-index: 9999999;
 }
-
+.leaflet-control-scale-line {
+  font-size:20px; /* Adjust the font size as needed */
+}
 /* side bar */
+.custom-modal-class {
+  width: 300px; 
+  height: 200px;
+  font-size:20px ; 
+}
+.custom-icon-class {
+  font-size: 10px; /* Set your desired icon size */
+}
+
+.custom-title-class {
+  font-size: 1.5em; /* Set your desired title size */
+}
+
+.custom-text-class {
+  font-size: 1em; /* Set your desired text size */
+}
+.custom-close-button-class {
+background-color: #f44336; 
+border: 2px solid #f44336;
+color: white; 
+border-radius: 0; 
+padding: 5px; 
+font-size: 20px;
+}
+
+.custom-close-button-class:hover {
+/* Add your custom hover styles for the close button here */
+background-color: #d32f2f; /* Darker red background color on hover */
+}
+    .swal2-show {
+    animation: swal2-show 0.3s ease; /* Set the transition with ease */
+  }
+
+  .swal2-hide {
+    animation: swal2-hide 0.3s ease; /* Set the transition with ease */
+  }
+
+  @keyframes swal2-show {
+    from {
+      opacity: 0;
+      transform: scale(0.8);
+    }
+    to {
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
+
+  @keyframes swal2-hide {
+    from {
+      opacity: 1;
+      transform: scale(1);
+    }
+    to {
+      opacity: 0;
+      transform: scale(0.8);
+    }
+  }
