--- a/style1.css
+++ b/style1.css
@@ -245,6 +245,8 @@ main {
   font-size:20px; /* Adjust the font size as needed */
 }
 /* side bar */
+
+/* popup */
 .custom-modal-class {
   width: 300px; 
   height: 200px;
