--- a/style.css
+++ b/style.css
@@ -281,4 +281,141 @@ main {
 .leaflet-touch .geocoder-control {
   z-index: 9999999;
 }
+.leaflet-control-scale-line {
+  font-size:20px; /* Adjust the font size as needed */
+}
 
+/* side bar */
+
+/* popup */
+.custom-modal-class {
+  width: 300px; 
+  height: 200px;
+  font-size:20px ; 
+}
+.custom-icon-class {
+  font-size: 10px; /* Set your desired icon size */
+}
+
+.custom-title-class {
+  font-size: 1.5em; /* Set your desired title size */
+}
+
+.custom-text-class {
+  font-size: 1em; /* Set your desired text size */
+}
+.custom-close-button-class {
+background-color: #f44336; 
+border: 2px solid #f44336;
+color: white; 
+border-radius: 0; 
+padding: 5px; 
+font-size: 20px;
+}
+
+.custom-close-button-class:hover {
+/* Add your custom hover styles for the close button here */
+background-color: #d32f2f; /* Darker red background color on hover */
+}
+    .swal2-show {
+    animation: swal2-show 0.3s ease; /* Set the transition with ease */
+  }
+
+  .swal2-hide {
+    animation: swal2-hide 0.3s ease; /* Set the transition with ease */
+  }
+
+  @keyframes swal2-show {
+    from {
+      opacity: 0;
+      transform: scale(0.8);
+    }
+    to {
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
+
+  @keyframes swal2-hide {
+    from {
+      opacity: 1;
+      transform: scale(1);
+    }
+    to {
+      opacity: 0;
+      transform: scale(0.8);
+    }
+  }
+.leaflet-control-layers-list{
+  width: 200px;
+  height: 200px;
+  overflow-y: scroll;
+  scrollbar-width: thin;
+  font-size: 9px;
+  padding: 0px;
+}
+.leaflet-control-layers-overlays{
+  width: 100%;
+}
+
+/* side bar */
+
+/* popup */
+.custom-modal-class {
+  width: 300px; 
+  height: 200px;
+  font-size:20px ; 
+}
+.custom-icon-class {
+  font-size: 10px; /* Set your desired icon size */
+}
+
+.custom-title-class {
+  font-size: 1.5em; /* Set your desired title size */
+}
+
+.custom-text-class {
+  font-size: 1em; /* Set your desired text size */
+}
+.custom-close-button-class {
+background-color: #f44336; 
+border: 2px solid #f44336;
+color: white; 
+border-radius: 0; 
+padding: 5px; 
+font-size: 20px;
+}
+
+.custom-close-button-class:hover {
+/* Add your custom hover styles for the close button here */
+background-color: #d32f2f; /* Darker red background color on hover */
+}
+    .swal2-show {
+    animation: swal2-show 0.3s ease; /* Set the transition with ease */
+  }
+
+  .swal2-hide {
+    animation: swal2-hide 0.3s ease; /* Set the transition with ease */
+  }
+
+  @keyframes swal2-show {
+    from {
+      opacity: 0;
+      transform: scale(0.8);
+    }
+    to {
+      opacity: 1;
+      transform: scale(1);
+    }
+  }
+
+  @keyframes swal2-hide {
+    from {
+      opacity: 1;
+      transform: scale(1);
+    }
+    to {
+      opacity: 0;
+      transform: scale(0.8);
+    }
+  }
