--- a/style.css
+++ b/style.css
@@ -346,6 +346,8 @@ background-color: #d32f2f; /* Darker red background color on hover */
       transform: scale(0.8);
     }
   }
+
+  /* layer style */
 .leaflet-control-layers-list{
   width: 200px;
   height: 200px;
