--- a/style.css
+++ b/style.css
@@ -169,6 +169,7 @@ main {
   left: 0;
   width: 30%;
   max-height: 400px; /* Adjust the maximum height as needed */
+  overflow-x: scroll;
   overflow-y: scroll;
   background-color: rgba(255, 255, 255, 0.8);
   padding-left: 20px;
@@ -187,8 +188,8 @@ main {
   left: 60%;
   top:20%;
   max-height: 300px; 
-  overflow-y: scroll;
-  overflow-x: hidden;
+  overflow: scroll;
+ 
   background-color: #fff;
   /* background-color: rgba(255, 255, 255, 0.8); */
   padding-top: 10px;
