--- a/style.css
+++ b/style.css
@@ -13,13 +13,14 @@
   z-index: 1;
 }
 
+#map {
+  top: 0px;
+  left: 55px;
+  height: 100vh;
+  width: 97%;
+  z-index: 0;
 
-/* nav */
-/*  */
-/* #map {
-  width: 100%;
-  height: 90vh;
-} */
+}
 a {
   text-decoration: none;
   color: white;
@@ -56,6 +57,10 @@ td {
     border: none;
 
 } */
+
+.leaflet-draw-toolbar{
+  display: none;
+} 
 .leaflet-popup-content-wrapper {
   max-height: 300px;
   /* Set the maximum height for the table */
