--- a/style.css
+++ b/style.css
@@ -472,17 +472,34 @@ background-color: #d32f2f; /* Darker red background color on hover */
   top: 50px;
 }
 
- /* .leaflet-touch .leaflet-control-layers, .leaflet-touch .leaflet-bar {
-  border: 2px solid rgba(0, 0, 0, 0.2);
-  background-clip: padding-box;
-  position: relative;
-  top: 60px;
-}  */
 
-/* leaflet-control {
+#paginationControls {
+  text-align: right;
+  margin-top: 10px;
+  /* Adjust this value as needed */
+}
+/* 
+#paginationControls button {
+  margin-left: 5px;
+} */
+
+#workTableDashboard {
   position: relative;
-  z-index: 800;
-  pointer-events: visiblePainted;
-  pointer-events: auto;
-  top: -4px;
-}   */ 
+}
+
+#paginationControls {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin: 10px;
+}
+.pagibtn{
+  
+  background-color: transparent;
+  color: #007bff;
+}
+.pagibtn:hover{
+  
+  background-color: transparent;
+  color: #007bff;
+}
