--- a/style.css
+++ b/style.css
@@ -486,3 +486,29 @@ background-color: #d32f2f; /* Darker red background color on hover */
   pointer-events: auto;
   top: -4px;
 }   */ 
+
+
+/* #paginationControls {
+  text-align: right;
+  margin-top: 10px;
+} */
+/*
+#paginationControls button {
+  margin-left: 5px;
+} */
+ 
+#workTableDashboard {
+  position: relative;
+}
+ 
+ 
+.pagibtn{
+  margin: 0 5px;
+  background-color: transparent;
+  color: #007bff;
+}
+.pagibtn:hover{
+ 
+  background-color: transparent;
+  color: #007bff;
+}
