--- a/style.css
+++ b/style.css
@@ -473,11 +473,10 @@ background-color: #d32f2f; /* Darker red background color on hover */
 }
 
 
-#paginationControls {
+/* #paginationControls {
   text-align: right;
   margin-top: 10px;
-  /* Adjust this value as needed */
-}
+} */
 /* 
 #paginationControls button {
   margin-left: 5px;
@@ -487,14 +486,9 @@ background-color: #d32f2f; /* Darker red background color on hover */
   position: relative;
 }
 
-#paginationControls {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  margin: 10px;
-}
+
 .pagibtn{
-  
+  margin: 0 5px;
   background-color: transparent;
   color: #007bff;
 }
