--- a/C_form.css
+++ b/C_form.css
@@ -290,7 +290,9 @@ a {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    overflow: hidden
+    overflow: hidden;
+    margin-top:100%;
+
 }
 
 .nav_logo,
@@ -335,9 +337,6 @@ a {
     left: 0
 }
 
-.body-pd {
-    /* padding-left: calc(var(--nav-width) + 1rem) */
-}
 
 .active {
     color: var(--white-color)
@@ -388,14 +387,13 @@ a {
         padding: 1rem 1rem 0 0
     }
 
-    .show {
-        width: calc(var(--nav-width) + 156px)
+    
+.show {
+    left: 0
+
     }
 
-    .body-pd {
-        /* padding-left: calc(var(--nav-width) + 188px) */
-        
-    }
+    
 }
 
 /* subdropdown css */
