--- a/style.css
+++ b/style.css
@@ -540,3 +540,14 @@ background-color: #d32f2f; /* Darker red background color on hover */
   width: 20px;
   height: 20px;
 }
+
+
+.geopulseaname{
+  color: darkblue;
+  position: absolute;
+  z-index: 99999;
+  bottom: 1%;
+  right: 5px;
+  font-weight: bold;
+  background-color: rgba(173, 216, 230, 0.5);
+}
