--- a/style.css
+++ b/style.css
@@ -549,5 +549,6 @@ background-color: #d32f2f; /* Darker red background color on hover */
   bottom: 1%;
   right: 5px;
   font-weight: bold;
-  background-color: rgba(173, 216, 230, 0.5);
+  /* background-color: rgba(173, 216, 230, 0.5); */
+  font-size: 10px;
 }
