--- a/C_form.css
+++ b/C_form.css
@@ -273,56 +273,16 @@ a {
 .input-group .btn {
     margin-left: 10px;
 }
-.l-navbar {
-    position: fixed;
-    top: 0;
-    left: -30%;
-    width: var(--nav-width);
-    height: 100vh;
-    background-color: var(--first-color);
-    padding: .5rem 1rem 0 0;
-    transition: .5s;
-    z-index: var(--z-fixed)
-}
 
-.nav {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    overflow: hidden;
-    margin-top:100%;
-
-}
-
-.nav_logo,
-.nav_link {
-    display: grid;
-    grid-template-columns: max-content max-content;
-    align-items: center;
-    column-gap: 1rem;
-    padding: .5rem 0 .5rem 1.5rem
-}
-
-.nav_logo {
-    margin-bottom: 2rem
-}
-
-.nav_logo-icon {
-    font-size: 1.25rem;
-    color: var(--white-color)
-}
-
-.nav_logo-name {
-    color: var(--white-color);
-    font-weight: 700
-}
-
-.nav_link {
-    position: relative;
-    color: var(--first-color-light);
-    margin-bottom: 1.5rem;
-    transition: .3s
+.filter {
+    position: absolute;
+    z-index: 9999;
+    color: var(--first-color-dark);
+    background-color: white;
+    padding: 3px 4px;
+    top: 17.5%;
+    border: 2px solid #bbb;
+    border-radius:5px ;
 }
 
 .nav_link:hover {
@@ -626,10 +586,10 @@ a {
 			#table-container {
 				background-color: white;
 				position: absolute;
-				width: 24%;
-                height: 30%;
-				top: 0;
-				right: 0;
+				width: 20%;
+                height:40%;
+				top: 10%;
+				right: 10%;
 				overflow: scroll;
 				scrollbar-width: thin;
 				/* margin: 0 auto; */
