--- a/css/C_form.css
+++ b/css/C_form.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 50px;
+    /* margin: 50px; */
     background-color: transparent;
 }
 
@@ -15,8 +15,7 @@ form {
     flex-wrap: wrap;
 }
 #content{
-  /* overflow: auto; */
-  margin-left:10%;
+  margin-left:9.5%;
 }
 #form-section{
 overflow-y: auto;
@@ -151,12 +150,6 @@ a{
     transition: background-color 0.3s;
 }
 
-/* geometry */
-/* 
-#map{
-    height: 350px;
-    width: 100%;
-} */
 
 .popup-container {
     max-height: 200px; /* Set maximum height */
@@ -183,7 +176,7 @@ a{
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap");
 
 :root {
-    --header-height: 3rem;
+    /* --header-height: 3rem; */
     --nav-width: 68px;
     --first-color: #163140;
     --first-color-light: #AFA5D9;
@@ -210,42 +203,6 @@ body {
 
 a {
     text-decoration: none
-}
-
-.header {
-    width: 100%;
-    height: var(--header-height);
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 1rem;
-    background-color: var(--white-color);
-    z-index: var(--z-fixed);
-    transition: .5s;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add box-shadow property */
-}
-
-.header_toggle {
-    color: var(--first-color);
-    font-size: 1.5rem;
-    cursor: pointer
-}
-
-.header_img {
-    width: 35px;
-    height: 35px;
-    display: flex;
-    justify-content: center;
-    border-radius: 50%;
-    overflow: hidden;
-    margin-left: auto;
-}
-
-.header_img img {
-    width: 40px
 }
 
 .input-group {
@@ -276,6 +233,7 @@ a {
     background-color: white;
     padding: 3px 4px;
     top: 17.5%;
+    left: 0.3%;
     border: 2px solid #bbb;
     border-radius:5px ;
 }
@@ -310,12 +268,6 @@ a {
     height: 100vh
 }
 
-/* .height-100 #map{
-    left:-33px;
-    top: 8%;
-    height: 92%;
-    width: 103%;
-} */
 
 @media screen and (min-width: 768px) {
     body {
@@ -517,6 +469,7 @@ a {
         }
 
         .tablebtn{
+          /* padding: 5px; */
             width: 20px;
             height: 20px;
           }
@@ -545,7 +498,7 @@ a {
            position: absolute;
            z-index: 9999;
            top: 45%;
-           left: -2%;
+           left: -4%;
           }
           .leaflet-container .leaflet-control-attribution {
     
@@ -556,18 +509,14 @@ a {
             color: darkblue;
             position: absolute;
             z-index: 99999;
-            bottom: -5.5px;
-            right: 5px;
+            bottom: 0px;
+            right: 15px;
             font-weight: bold;
             /* background-color: rgba(173, 216, 230, 0.5); */
             font-size: 10px;
           }
 
-          #map {
-				height: 80vh;
-				width: 100%;
-				z-index: 0;
-			}
+      
 			form {
 				max-width: 100%;
 				margin: auto;
@@ -777,4 +726,285 @@ a {
     z-index: 4079;
     background-color: red;
   }
+
+
+  .leaflet-touch .geocoder-control-input {
+    height: 30px;
+    line-height: 30px;
+    background-size: 30px;
+    position: relative;
+    top: 75px;
+    left: 0px;
+}
+
+ 
+    .leaflet-draw-toolbar {
+      display: none;
+    }
+
+    .leaflet-control-layers-toggle {
+      top: 0;
+    }
+
+    .leaflet-control-layers-list {
+      width: 200px;
+      height: 200px;
+      overflow-y: scroll;
+      scrollbar-width: thin;
+      font-size: 9px;
+      padding: 0px;
+
+    }
+
+    .leaflet-control-layers-overlays {
+      width: 100%;
+    }
+
+    #map {
+    top: 0px;
+    left: -12%;
+    height: 100vh;
+    width: 100vw;
+    z-index: 0;
+}
+
+    .multi-checkboxes_wrap:before {
+      font-family: fontAwesome;
+      color: #999;
+      content: "\f096";
+      /* width: 25px;
+        height: 25px;
+        padding-right: 10px; */
+    }
+
+    .multi-checkboxes_wrap[aria-selected="true"]:before {
+      content: "\f14a";
+    }
+
+    .form-control {
+      height: 30px;
+      padding: auto;
+    }
+
+    .accordion-button {
+      height: 30px;
+      font-size: 12px;
+    }
+
+    .form-select {
+      justify-content: center;
+      margin-left: -35px;
+      /* width: 50px; */
+    }
+
+    .accordion-body .form-control {
+      margin-left: -35px;
+    }
+
+    .accordion-button:hover {
+      background-color: #bbb;
+    }
+
+    .sidebar {
+      height: 100%;
+      width: 0;
+      position: fixed;
+      z-index: 1;
+      left: 70px;
+      background-color: #f3f3f3;
+      overflow-x: hidden;
+      transition: 0s;
+      padding-top: 10px;
+      overflow-y: scroll;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+      /* Add shadow */
+    }
+
+    .sidebar a {
+      text-decoration: none;
+      padding: 0px 8px 8px 38px;
+    }
+
+    .sidebar .form-group {
+      padding: 0px 8px 8px 38px;
+      font-size: 13px;
+      color: black;
+      display: block;
+      transition: 0.3s;
+    }
+
+
+
+    .sidebar .closebtn {
+      position: absolute;
+      color: red;
+      top: 0px;
+      right: -3px;
+      /* font-size: 30px; */
+      font-weight: bold;
+      margin-left: 50px;
+    }
+
+    #content {
+      transition: margin-left 0.5s;
+      /* padding: 16px; */
+    }
+
+    .dataTables_wrapper .dataTables_filter {
+      display: none;
+    }
+
+    .dataTables_length {
+      display: none;
+    }
+
+    .dataTables_wrapper .dataTables_length,
+    .dataTables_wrapper .dataTables_filter,
+    .dataTables_wrapper .dataTables_info,
+    .dataTables_wrapper .dataTables_processing,
+    .dataTables_wrapper .dataTables_paginate {
+      color: #333;
+      font-size: 10px;
+      position: absolute;
+      left: 30px;
+      right: 30px;
+    }
+
+    @media screen and (max-height: 450px) {
+      .sidebar {
+        padding-top: 15px;
+      }
+
+      .sidebar a {
+        font-size: 18px;
+      }
+    }
+
+    #thead {
+      position: sticky;
+      top: 0;
+      z-index: 1;
+    }
+
+    
+#paginationControls button {
+  background-color: transparent;
+  color: darkblue;
+  font-size: 15px;
+  height: 25px;
+}
+
+#paginationControls  p{
+  font-size: 10px;
+  margin-top: 11px;
+  /* bottom: 0; */
+}
+
+#openTableBtn{
+  position: fixed;
+  z-index: 9999;
+  top: 80%;
+  width: auto;
+  padding: 5px;
+  /* height: 5.5%; */
+  right: 0.8%;
+  background-color: white;
+  border-radius: 10px;
+  border: 2px solid #bbb;
+
+}
+
+.select2-container--default .select2-selection--multiple .select2-selection__choice {
+    background-color: transparent;
+    border: none;
+    border-radius: 4px;
+    box-sizing: border-box;
+    display: inline-block;
+    margin-left:-18px;
+    margin-top: 5px;
+    padding: 0;
+    padding-left: 20px;
+    position: relative;
+    max-width: 100%;
+    overflow: hidden;
+    /* text-overflow: ellipsis; */
+    vertical-align: bottom;
+    white-space: nowrap;
+    width: 100%;
+}
+
+.select2-container--default .select2-selection--multiple .select2-selection__choice__remove:hover {
+    background-color: transparent;
   
+}
+
+.select2-container--default .select2-selection--multiple .select2-selection__choice__remove {
+    background-color: transparent;
+    border: none;
+    border-right: 1px solid #aaa;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    color:black;
+    cursor: pointer;
+    max-width:  100%;
+    font-size: 2em;
+    /* font-weight: bold; */
+    padding: 0 4px;
+    position: absolute;
+    left: 90%;
+    top: -12px;
+    z-index: 99999;
+}
+
+button, input, optgroup, select, textarea {
+    margin: 0;
+    font-family: inherit;
+    /* font-size: inherit; */
+    /* line-height: inherit; */
+    width: 10px;
+}
+
+.leaflet-container .leaflet-control-attribution {
+    
+    display: none;
+}
+.input-group {
+    position: relative;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: stretch;
+    width: 100%;
+    left: 300%;
+    top: 10px;
+}
+
+.leaflet-control-zoom{
+      position: relative;
+      right: 10%;
+      bottom:15px;
+      border: 1px solid;
+    }
+
+
+    /* popup */
+
+    tbody, td, tfoot, th, thead, tr {
+      border-color: inherit;
+      border-style: solid;
+      border-width: 0;
+      font-size: 12px;
+    }
+    .popup-table tr,td{
+      border-bottom: 1px solid;
+      
+      }
+
+      .leaflet-popup-content {
+        margin: 13px 24px 13px 20px;
+        line-height: 1.3;
+        font-size: 13px;
+        font-size: 1.08333em;
+        min-height: 1px;
+        width: 230px;
+      }
