--- a/css/C_form.css
+++ b/css/C_form.css
@@ -1014,6 +1014,7 @@ button, input, optgroup, select, textarea {
         min-height: 1px;
         width: 240px;
        scrollbar-width: thin;
+       resize: both;
       }
 
 
