--- a/css/C_form.css
+++ b/css/C_form.css
@@ -660,13 +660,12 @@ a {
   }
 
   
-.leaflet-popup-content-wrapper {
+  .leaflet-popup-content-wrapper {
     max-height: 300px;
-    /* Set the maximum height for the table */
     overflow-y: auto;
-    /* Add a vertical scrollbar when the content overflows */
     width: 100%;
-  }
+    overflow-x: hidden;
+}
   
   #popup-table {
     max-width: 200px;
