--- a/style.css
+++ b/style.css
@@ -181,20 +181,39 @@ body {
 main {
   flex: 1;
 }
-#table-container {
+
+
+/* #table-container {
   display: none;
   position: fixed;
   bottom: 0;
   left: 0;
   width: 30%;
-  max-height: 400px; /* Adjust the maximum height as needed */
+  max-height: 400px; 
   overflow-x: scroll;
   overflow-y: scroll;
   background-color: rgba(255, 255, 255, 0.8);
   padding-left: 20px;
   border-top: 1px solid #ccc;
   z-index: 99999;
+} */
+
+
+#table-container {
+  background-color: white;
+  display: none;
+  position: absolute;
+  width: 30%;
+  height:40%;
+  top: 15%;
+  right: 1%;
+  overflow: scroll;
+  scrollbar-width: thin;
+  z-index: 9999;
+ transition: 0s;
 }
+
+
 #table-container tbody tr {
   cursor: pointer;
 }
