--- a/css/C_form.css
+++ b/css/C_form.css
@@ -790,8 +790,13 @@ a {
 
     .accordion-button {
       height: 30px;
-      font-size: 12px;
+      font-size: 13px;
+      height: 30px;
+      font-size: 13px;
+      color: darkblue;
+      font-weight: bold;
     }
+    
 
     .form-select {
       justify-content: center;
@@ -820,6 +825,8 @@ a {
       overflow-y: scroll;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
+      color: darkblue;
+      font-weight: bold;
       /* Add shadow */
     }
 
@@ -838,17 +845,20 @@ a {
    .form-group{
      margin-bottom: 0;
    }
+  
+  
+  .sidebar .closebtn {
+    position: absolute; 
+    color: red;
+    top: -8px;
+    right: -10px;
+    /* font-size: 30px; */
+    font-weight: bold;
+    margin-left: 50px;
+    z-index: 1;
+  }
+  
 
-
-    .sidebar .closebtn {
-      position: absolute;
-      color: red;
-      top: -5px;
-      right: -4px;
-      /* font-size: 30px; */
-      font-weight: bold;
-      margin-left: 50px;
-    }
 
     #content {
       transition: margin-left 0.5s;
@@ -1046,4 +1056,28 @@ button, input, optgroup, select, textarea {
   border-right: 1px solid ; 
   padding: 7px;
 
+}
+.accordion {
+  --bs-accordion-color: var(--bs-body-color);
+  --bs-accordion-bg: var(--bs-body-bg);
+  --bs-accordion-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, border-radius 0.15s ease;
+  --bs-accordion-border-color: var(--bs-border-color);
+  --bs-accordion-border-width: var(--bs-border-width);
+  --bs-accordion-border-radius: var(--bs-border-radius);
+  --bs-accordion-inner-border-radius: calc(var(--bs-border-radius) - (var(--bs-border-width)));
+  --bs-accordion-btn-padding-x: 1.25rem;
+  --bs-accordion-btn-padding-y: 1rem;
+  --bs-accordion-btn-color: var(--bs-body-color);
+  --bs-accordion-btn-bg: var(--bs-accordion-bg);
+  --bs-accordion-btn-icon: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23212529'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e);
+  --bs-accordion-btn-icon-width: 1.2rem;
+  --bs-accordion-btn-icon-transform: rotate(-180deg);
+  --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
+  --bs-accordion-btn-active-icon: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23052c65'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e);
+  --bs-accordion-btn-focus-border-color:#00008b;
+  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+  --bs-accordion-body-padding-x: 1.25rem;
+  --bs-accordion-body-padding-y: 1rem;
+  --bs-accordion-active-color: var(--bs-primary-text-emphasis);
+  --bs-accordion-active-bg: var(--bs-primary-bg-subtle);
 }
