--- a/css/style.css
+++ b/css/style.css
@@ -323,21 +323,21 @@ main {
 /* side bar */
 
 /* popup */
-.custom-modal-class {
+/* .custom-modal-class {
   width: 300px; 
   height: 200px;
   font-size:20px ; 
 }
 .custom-icon-class {
-  font-size: 10px; /* Set your desired icon size */
+  font-size: 10px;
 }
 
 .custom-title-class {
-  font-size: 1.5em; /* Set your desired title size */
+  font-size: 1.5em; 
 }
 
 .custom-text-class {
-  font-size: 1em; /* Set your desired text size */
+  font-size: 1em; 
 }
 .custom-close-button-class {
 background-color: #f44336; 
@@ -349,8 +349,8 @@ font-size: 20px;
 }
 
 .custom-close-button-class:hover {
-background-color: #d32f2f; /* Darker red background color on hover */
-}
+background-color: #d32f2f; 
+} */
     .swal2-show {
     animation: swal2-show 0.3s ease; /* Set the transition with ease */
   }
@@ -381,7 +381,7 @@ background-color: #d32f2f; /* Darker red background color on hover */
     }
   }
 
-  /* layer style */
+ 
 .leaflet-control-layers-list{
   width: 200px;
   height: 200px;
@@ -394,23 +394,23 @@ background-color: #d32f2f; /* Darker red background color on hover */
   width: 100%;
 }
 
-
 /* popup */
-.custom-modal-class {
+
+/* .custom-modal-class {
   width: 300px; 
   height: 200px;
   font-size:20px ; 
 }
 .custom-icon-class {
-  font-size: 10px; /* Set your desired icon size */
+  font-size: 10px;
 }
 
 .custom-title-class {
-  font-size: 1.5em; /* Set your desired title size */
+  font-size: 1.5em; 
 }
 
 .custom-text-class {
-  font-size: 1em; /* Set your desired text size */
+  font-size: 1em; 
 }
 .custom-close-button-class {
 background-color: #f44336; 
@@ -419,7 +419,7 @@ color: white;
 border-radius: 0; 
 padding: 5px; 
 font-size: 20px;
-}
+} */
 
 .custom-close-button-class:hover {
 /* Add your custom hover styles for the close button here */
@@ -556,6 +556,38 @@ background-color: #d32f2f; /* Darker red background color on hover */
 .custom-button:hover {
   background-color: #bbb;
 }
+/* popup */
 
 
+  /* .popup-table td {
+    border-right: 1px solid; 
+    padding: 7px;
+    vertical-align: middle;
+  } */
 
+  .leaflet-popup-content {
+    margin: 13px 24px 13px 20px;
+    line-height: 1.3;
+    font-size: 10px;
+    font-size: 1.08333em;
+    min-height: 1px;
+    width: 240px;
+   scrollbar-width: thin;
+   resize: both;
+  }
+
+
+  /* .leaflet-popup-content strong{
+padding: 5px;
+  } */
+  tbody, td, tfoot, th, thead, tr {
+    border-color: inherit;
+    border-style: solid;
+    border-width: 0;
+    font-size: 10px;
+  }
+  .popup-table tr,td{
+    border-bottom: 1px solid;
+    /* padding: 5px; */
+  
+    }
